# bess_arbitrage

./: .gitignore  README.md  conftest.py  pyproject.toml  pyrightconfig.json  requirements.txt  streamlit_app.py  train_models.py
data/: BE_2021-01-01_2025-12-31.parquet  DE_2021-01-01_2025-12-31.parquet  DE_2023-04-02_2024-06-30.parquet  DE_2023-05-02_2024-10-31.parquet  DE_2023-06-02_2025-06-30.parquet  DE_2023-06-09_2024-06-08.parquet  DE_2024-04-01_2025-04-30.parquet  DE_2024-04-01_2025-06-30.parquet  DE_2024-04-30_2024-05-31.parquet  DE_2025-03-25_2025-04-30.parquet  DE_2025-03-31_2025-04-30.parquet  DE_2025-03-31_2025-05-31.parquet  DE_2025-03-31_2025-06-30.parquet  ES_2021-01-01_2025-12-31.parquet  FR_2021-01-01_2025-12-31.parquet  GB_2021-01-01_2025-12-31.parquet  GB_2023-05-02_2024-05-31.parquet  GB_2023-05-02_2024-06-30.parquet  GB_2023-06-02_2024-06-30.parquet  GB_2023-06-02_2024-08-31.parquet  GB_2024-04-24_2024-05-31.parquet  GB_2024-04-30_2024-05-31.parquet  GB_2024-05-25_2024-08-31.parquet  GB_2024-05-31_2024-08-31.parquet  GB_2024-09-01_2025-10-31.parquet  GB_2024-11-01_2025-12-31.parquet  GB_2025-01-07_2026-01-07.parquet  IT-NO_2021-01-01_2025-12-31.parquet  NL_2021-01-01_2025-12-31.parquet  PL_2021-01-01_2025-12-31.parquet  SE-SE3_2021-01-01_2025-12-31.parquet
models/: bess_europe.lgb  bess_gb.lgb
pages/: 01_forecast_vs_foresight.py  02_backtester.py  03_region_comparison.py
src/bess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_backtest.py  test_em_client.py  test_forecast.py  test_metrics.py  test_ml.py  test_optimiser.py
(+7 files in other folders)
